--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "rpi-dht-sensor": "^0.1.1",
+    "shortid": "^2.2.8",
     "socket.io": "^2.0.3",
     "time-stamp": "^2.0.0"
   }
