--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "rpi-dht-sensor": "^0.1.1",
     "shortid": "^2.2.8",
     "socket.io": "^2.0.3",
-    "time-stamp": "^2.0.0"
+    "time-stamp": "^2.0.0",
+    "to-unix-timestamp": "github:segmentio/to-unix-timestamp"
   }
 }
